# disconnected-readiness-scorer

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  main.py  pyproject.toml  ruff.toml  run_all.py
.claude-plugin/: plugin.json
.github/config/: automation-state.yml  repositories.yaml
.github/scripts/pr_automation/: __init__.py  __main__.py  config.py  github_client.py  main.py  pr_creator.py  repositories.py  requirements.txt  state.py  utils.py  workflows.py
.github/templates/: workflow.yml
.github/workflows/: ci.yml  create-drs-prs.yml  disconnected-readiness-check.yml  readiness-summary.yml  release.yml
config/: config.yaml
docs/: RELEASE_PROCESS.md  VERSIONING.md  remediation-guide.md  rules-reference.md
rules/: common.py  image_manifest_complete.py  no_image_tags.py  no_runtime_egress.py  operator_manifest.py  params_env.py  params_env_utils.py  production_scope.py  python_imports.py
schemas/: config.schema.json
skills/disconnected-score/: SKILL.md
tests/: test_common.py  test_image_manifest_complete.py  test_main.py  test_no_image_tags.py  test_no_runtime_egress.py  test_operator_manifest.py  test_params_env.py  test_params_env_utils.py  test_production_scope.py  test_python_imports.py
