[project]
name = "disconnected-readiness-scorer"
version = "0.1.0"
description = "Score a repository's readiness for disconnected / air-gapped OpenShift deployments"
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0",
    "jsonschema>=4.0",
]

[project.optional-dependencies]
report = ["jinja2>=3.0"]
dev = [
    "pytest>=9.0",
    "pytest-cov>=7.0",
    "jinja2>=3.0",
    "ruff>=0.15.0",
]

[tool.uv]
package = false
